--- a/Pages/Admin/actors.html
+++ b/Pages/Admin/actors.html
@@ -22,7 +22,10 @@
         <span class="logo-left">filmalisa</span>
       </div>
       <ul class="menu">
-        <li class="menu-item menu-dashboard hover1">
+        <li
+          class="menu-item menu-dashboard hover1"
+          onclick="window.location.href='../../Pages/Admin/dashboard.html'"
+        >
           <img
             src="/Assets/icons/movie/movie-icon3.svg"
             alt="Dashboard Icon"
@@ -30,7 +33,10 @@
           />
           <span class="menu-text dashboard">Dashboard</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/movies.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-movies.svg"
             alt="Movies Icon"
@@ -38,7 +44,10 @@
           />
           <span class="menu-text">Movies</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/categories.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-star.svg"
             alt="Categories Icon"
@@ -46,7 +55,10 @@
           />
           <span class="menu-text">Categories</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/users.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-user.svg"
             alt="Users Icon"
@@ -54,7 +66,10 @@
           />
           <span class="menu-text">Users</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/comments.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-comments.svg"
             alt="Comments Icon"
@@ -62,7 +77,10 @@
           />
           <span class="menu-text">Comments</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/contactus.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-contacts.svg"
             alt="Contact Icon"
@@ -70,16 +88,25 @@
           />
           <span class="menu-text">Contact us</span>
         </li>
-        <li class="menu-item menu-movies hover2">
+        <li
+          class="menu-item menu-movies hover2"
+          onclick="window.location.href='../../Pages/Admin/actors.html'"
+        >
           <img
             src="/Assets/icons/users/user-icon.svg"
-            alt="Contact Icon"
+            alt="Actors Icon"
             class="menu-icon"
           />
           <span class="menu-text movie">Actors</span>
         </li>
       </ul>
-      <div class="logout-div">
+
+      <div
+        class="logout-div"
+        onclick="window.location.href='../../Pages/Admin/login.html'"
+      >
+        >
+
         <img
           src="/Assets/icons/dashboard/dashboard-logout.svg"
           alt="Logout Icon"
@@ -116,7 +143,7 @@
               <th>Name</th>
               <th>Surname</th>
               <th>Edit</th>
-              <th class="th-border2"></th>
+              <th class="th-border2">Remove</th>
             </tr>
           </thead>
           <tbody class="tbody">
@@ -124,13 +151,15 @@
               <td>1</td>
               <td>Tony</td>
               <td>Stark</td>
-              <td class="td-imgIcon">
+              <td>
                 <img
                   src="/Assets/icons/categories/edit-icon.png
                   "
                   alt="edit-icon"
                   class="img-icon"
                 />
+              </td>
+              <td>
                 <img
                   src="/Assets/icons/categories/remove-icon.png
                 "
