--- a/Pages/Admin/categories.html
+++ b/Pages/Admin/categories.html
@@ -26,7 +26,10 @@
         <span class="logo-left">filmalisa</span>
       </div>
       <ul class="menu">
-        <li class="menu-item menu-dashboard hover1">
+        <li
+          class="menu-item menu-dashboard hover1"
+          onclick="window.location.href='../../Pages/Admin/dashboard.html'"
+        >
           <img
             src="/Assets/icons/movie/movie-icon3.svg"
             alt="Dashboard Icon"
@@ -34,7 +37,10 @@
           />
           <span class="menu-text dashboard">Dashboard</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/movies.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-movies.svg"
             alt="Movies Icon"
@@ -42,7 +48,10 @@
           />
           <span class="menu-text">Movies</span>
         </li>
-        <li class="menu-item menu-movies hover2">
+        <li
+          class="menu-item menu-movies hover2"
+          onclick="window.location.href='../../Pages/Admin/categories.html'"
+        >
           <img
             src="/Assets/icons/categories/movie.svg"
             alt="Categories Icon"
@@ -50,7 +59,10 @@
           />
           <span class="menu-text movie">Categories</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/users.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-user.svg"
             alt="Users Icon"
@@ -58,7 +70,10 @@
           />
           <span class="menu-text">Users</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/comments.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-comments.svg"
             alt="Comments Icon"
@@ -66,7 +81,10 @@
           />
           <span class="menu-text">Comments</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/contactus.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-contacts.svg"
             alt="Contact Icon"
@@ -74,16 +92,25 @@
           />
           <span class="menu-text">Contact us</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/actors.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-user.svg"
-            alt="Contact Icon"
+            alt="Actors Icon"
             class="menu-icon"
           />
           <span class="menu-text">Actors</span>
         </li>
       </ul>
-      <div class="logout-div">
+
+      <div
+        class="logout-div"
+        onclick="window.location.href='../../Pages/Admin/login.html'"
+      >
+        >
+
         <img
           src="/Assets/icons/dashboard/dashboard-logout.svg"
           alt="Logout Icon"
