--- a/Pages/Admin/movies.html
+++ b/Pages/Admin/movies.html
@@ -22,7 +22,10 @@
         <span class="logo-left">filmalisa</span>
       </div>
       <ul class="menu">
-        <li class="menu-item menu-dashboard hover1">
+        <li
+          class="menu-item menu-dashboard hover1"
+          onclick="window.location.href='../../Pages/Admin/dashboard.html'"
+        >
           <img
             src="/Assets/icons/movie/movie-icon3.svg"
             alt="Dashboard Icon"
@@ -30,7 +33,10 @@
           />
           <span class="menu-text dashboard">Dashboard</span>
         </li>
-        <li class="menu-item menu-movies hover2">
+        <li
+          class="menu-item menu-movies hover2"
+          onclick="window.location.href='../../Pages/Admin/movies.html'"
+        >
           <img
             src="/Assets/icons/movie/movie-icon2.svg"
             alt="Movies Icon"
@@ -38,7 +44,10 @@
           />
           <span class="menu-text movie">Movies</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/categories.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-star.svg"
             alt="Categories Icon"
@@ -46,7 +55,10 @@
           />
           <span class="menu-text">Categories</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/users.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-user.svg"
             alt="Users Icon"
@@ -54,7 +66,10 @@
           />
           <span class="menu-text">Users</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/comments.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-comments.svg"
             alt="Comments Icon"
@@ -62,7 +77,10 @@
           />
           <span class="menu-text">Comments</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/contactus.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-contacts.svg"
             alt="Contact Icon"
@@ -70,16 +88,25 @@
           />
           <span class="menu-text">Contact us</span>
         </li>
-        <li class="menu-item hover1">
+        <li
+          class="menu-item hover1"
+          onclick="window.location.href='../../Pages/Admin/actors.html'"
+        >
           <img
             src="/Assets/icons/dashboard/dashboard-user.svg"
-            alt="Contact Icon"
+            alt="Actors Icon"
             class="menu-icon"
           />
           <span class="menu-text">Actors</span>
         </li>
       </ul>
-      <div class="logout-div">
+
+      <div
+        class="logout-div"
+        onclick="window.location.href='../../Pages/Admin/login.html'"
+      >
+        >
+
         <img
           src="/Assets/icons/dashboard/dashboard-logout.svg"
           alt="Logout Icon"
@@ -125,9 +152,10 @@
           <tbody>
             <tr>
               <td>1</td>
-              <td class="movie-title">
+              <td>
                 <img
                   src="/Assets/icons/movie/movie-icon.svg"
+                  style="width: 29px; height: 39px"
                   alt="Movie Poster"
                 /><br />
               </td>
@@ -210,7 +238,7 @@
                 <input type="text" id="runtime" placeholder="run time minute" />
               </div>
               <div class="form-group">
-                <select id="category">
+                <select id="category" class="form-control custom-select">
                   <option value="">category</option>
                   <option value="Action">Action</option>
                   <option value="Drama">Drama</option>
