--- a/Pages/Client/home.html
+++ b/Pages/Client/home.html
@@ -9,20 +9,20 @@
   <body>
     <div class="left">
       <div class="logo-div">
-        <img src="/Assets/icons/user-home/logo-user.svg" alt="Logo" />
+        <img src="../../Assets/icons/user-home/logo-user.svg" alt="Logo" />
       </div>
       <div class="sidebar">
         <a href="#" class="icon">
-          <img src="/Assets/icons/user-home/icon-1.svg" alt="Home" />
+          <img src="../../Assets/icons/user-home/icon-1.svg" alt="Home" />
         </a>
         <a href="#" class="icon">
-          <img src="/Assets/icons/user-home/icon-2.svg" alt="Movies" />
+          <img src="../../Assets/icons/user-home/icon-2.svg" alt="Movies" />
         </a>
         <a href="#" class="icon">
-          <img src="/Assets/icons/user-home/icon-3.svg" alt="TV Shows" />
+          <img src="../../Assets/icons/user-home/icon-3.svg" alt="TV Shows" />
         </a>
         <a href="#" class="icon">
-          <img src="/Assets/icons/user-home/icon-4.svg" alt="Favorites" />
+          <img src="../../Assets/icons/user-home/icon-4.svg" alt="Favorites" />
         </a>
       </div>
     </div>
@@ -80,7 +80,7 @@
         <div class="category-card">
           <div class="movie-card">
             <img
-              src="/Assets/icons/user-home/image-film-1.svg"
+              src="../../Assets/icons/user-home/image-film-1.svg"
               alt="Wonder Woman 1984"
               class="movie-image"
             />
@@ -91,7 +91,7 @@
           </div>
           <div class="movie-card">
             <img
-              src="/Assets/icons/user-home/image-film-2.svg"
+              src="../../Assets/icons/user-home/image-film-2.svg"
               alt="Wonder Woman 1984"
               class="movie-image"
             />
@@ -111,7 +111,7 @@
         <div class="content-container">
           <div class="content-card">
             <img
-              src="/Assets/icons/user-home/image-film-3.svg"
+              src="../../Assets/icons/user-home/image-film-3.svg"
               alt="Wonder Woman 1984"
               class="content-image"
             />
@@ -122,7 +122,7 @@
           </div>
           <div class="content-card">
             <img
-              src="/Assets/icons/user-home/image-film-4.svg"
+              src="../../Assets/icons/user-home/image-film-4.svg"
               alt="Zack Snyder's Justice League"
               class="content-image"
             />
@@ -135,6 +135,6 @@
       </div>
     </div>
 
-    <script src="/Scripts/Client/home.js"></script>
+    <script src="../../Scripts/Client/home.js"></script>
   </body>
 </html>
