--- a/Pages/Admin/actors.html
+++ b/Pages/Admin/actors.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../Styles/Admin/actors.css" />
     <link
       rel="icon"
-      href="/Assets/images/logo_with_uploaded_image (1).png"
+      href="../../Assets/images/logo_with_uploaded_image (1).png"
       type="image/png"
     />
   </head>
@@ -49,7 +49,7 @@
           onclick="window.location.href='../../Pages/Admin/categories.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-star.svg"
+            src="../../Assets/icons/dashboard/dashboard-star.svg"
             alt="Categories Icon"
             class="menu-icon"
           />
@@ -60,7 +60,7 @@
           onclick="window.location.href='../../Pages/Admin/users.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-user.svg"
+            src="../../Assets/icons/dashboard/dashboard-user.svg"
             alt="Users Icon"
             class="menu-icon"
           />
@@ -71,7 +71,7 @@
           onclick="window.location.href='../../Pages/Admin/comments.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-comments.svg"
+            src="../../Assets/icons/dashboard/dashboard-comments.svg"
             alt="Comments Icon"
             class="menu-icon"
           />
@@ -82,7 +82,7 @@
           onclick="window.location.href='../../Pages/Admin/contactus.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-contacts.svg"
+            src="../../Assets/icons/dashboard/dashboard-contacts.svg"
             alt="Contact Icon"
             class="menu-icon"
           />
@@ -93,7 +93,7 @@
           onclick="window.location.href='../../Pages/Admin/actors.html'"
         >
           <img
-            src="/Assets/icons/users/user-icon.svg"
+            src="../../Assets/icons/users/user-icon.svg"
             alt="Actors Icon"
             class="menu-icon"
           />
@@ -108,7 +108,7 @@
         >
 
         <img
-          src="/Assets/icons/dashboard/dashboard-logout.svg"
+          src="../../Assets/icons/dashboard/dashboard-logout.svg"
           alt="Logout Icon"
           class="logout-icon"
         />
@@ -128,7 +128,7 @@
             <span class="button-span">Create</span>
           </button>
           <img
-            src="/Assets/images/profile.svg"
+            src="../../Assets/images/profile.svg"
             alt="Profile Picture"
             class="profile-pic"
           />
@@ -153,7 +153,7 @@
               <td>Stark</td>
               <td>
                 <img
-                  src="/Assets/icons/categories/edit-icon.png
+                  src="../../Assets/icons/categories/edit-icon.png
                   "
                   alt="edit-icon"
                   class="img-icon"
@@ -161,7 +161,7 @@
               </td>
               <td>
                 <img
-                  src="/Assets/icons/categories/remove-icon.png
+                  src="../../Assets/icons/categories/remove-icon.png
                 "
                   alt="remove-icon"
                   class="img-icon"
@@ -208,6 +208,6 @@
       </div>
     </div>
 
-    <script src="/Scripts/Admin/actors.js"></script>
+    <script src="../../Scripts/Admin/actors.js"></script>
   </body>
 </html>
