--- a/Pages/Admin/categories.html
+++ b/Pages/Admin/categories.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../../Styles/Admin/categories.css" />
     <link
       rel="icon"
-      href="/Assets/images/logo_with_uploaded_image (1).png"
+      href="../../Assets/images/logo_with_uploaded_image (1).png"
       type="image/png"
     />
   </head>
@@ -19,7 +19,7 @@
     <div class="left">
       <div class="logo-div">
         <img
-          src="/Assets/icons/dashboard/dashboard-logo.svg"
+          src="../../Assets/icons/dashboard/dashboard-logo.svg"
           alt="Filmalisa Logo"
           class="logo-icon"
         />
@@ -31,7 +31,7 @@
           onclick="window.location.href='../../Pages/Admin/dashboard.html'"
         >
           <img
-            src="/Assets/icons/movie/movie-icon3.svg"
+            src="../../Assets/icons/movie/movie-icon3.svg"
             alt="Dashboard Icon"
             class="menu-icon"
           />
@@ -42,7 +42,7 @@
           onclick="window.location.href='../../Pages/Admin/movies.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-movies.svg"
+            src="../../Assets/icons/dashboard/dashboard-movies.svg"
             alt="Movies Icon"
             class="menu-icon"
           />
@@ -53,7 +53,7 @@
           onclick="window.location.href='../../Pages/Admin/categories.html'"
         >
           <img
-            src="/Assets/icons/categories/movie.svg"
+            src="../../Assets/icons/categories/movie.svg"
             alt="Categories Icon"
             class="menu-icon"
           />
@@ -64,7 +64,7 @@
           onclick="window.location.href='../../Pages/Admin/users.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-user.svg"
+            src="../../Assets/icons/dashboard/dashboard-user.svg"
             alt="Users Icon"
             class="menu-icon"
           />
@@ -75,7 +75,7 @@
           onclick="window.location.href='../../Pages/Admin/comments.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-comments.svg"
+            src="../../Assets/icons/dashboard/dashboard-comments.svg"
             alt="Comments Icon"
             class="menu-icon"
           />
@@ -86,7 +86,7 @@
           onclick="window.location.href='../../Pages/Admin/contactus.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-contacts.svg"
+            src="../../Assets/icons/dashboard/dashboard-contacts.svg"
             alt="Contact Icon"
             class="menu-icon"
           />
@@ -97,7 +97,7 @@
           onclick="window.location.href='../../Pages/Admin/actors.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-user.svg"
+            src="../../Assets/icons/dashboard/dashboard-user.svg"
             alt="Actors Icon"
             class="menu-icon"
           />
@@ -112,7 +112,7 @@
         >
 
         <img
-          src="/Assets/icons/dashboard/dashboard-logout.svg"
+          src="../../Assets/icons/dashboard/dashboard-logout.svg"
           alt="Logout Icon"
           class="logout-icon"
         />
@@ -132,7 +132,7 @@
             <span class="button-span">Create</span>
           </button>
           <img
-            src="/Assets/images/profile.svg"
+            src="../../Assets/images/profile.svg"
             alt="Profile Picture"
             class="profile-pic"
           />
@@ -155,7 +155,7 @@
               <td>Action</td>
               <td>
                 <img
-                  src="/Assets/icons/categories/edit-icon.png
+                  src="../../Assets/icons/categories/edit-icon.png
                 "
                   alt="edit-icon"
                   class="img-icon"
@@ -163,7 +163,7 @@
               </td>
               <td>
                 <img
-                  src="/Assets/icons/categories/remove-icon.png
+                  src="../../Assets/icons/categories/remove-icon.png
                 "
                   alt="remove-icon"
                   class="img-icon"
@@ -208,6 +208,6 @@
       </div>
     </div>
 
-    <script src="/Scripts/Admin/categories.js"></script>
+    <script src="../../Scripts/Admin/categories.js"></script>
   </body>
 </html>
