--- a/Pages/Admin/login.html
+++ b/Pages/Admin/login.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="../../Styles/Admin/login.css" />
     <link
       rel="icon"
-      href="/Assets/images/logo_with_uploaded_image (1).png"
+      href="../../Assets/images/logo_with_uploaded_image (1).png"
       type="image/png"
     />
   </head>
   <body>
     <div class="login-container">
-      <img src="/Assets/images/Login_logo.svg" alt="Logo" />
+      <img src="../../Assets/images/Login_logo.svg" alt="Logo" />
       <h1>Admin</h1>
       <form id="login-form">
         <div class="form-group">
           <div>
             <img
-              src="/Assets/icons/login/login_messages.svg"
+              src="../../Assets/icons/login/login_messages.svg"
               alt="username"
               class="input-icon"
             />
@@ -30,7 +30,7 @@
         </div>
         <div class="form-group">
           <img
-            src="/Assets/icons/login/login_password.svg"
+            src="../../Assets/icons/login/login_password.svg"
             alt="password"
             class="input-icon"
           />
@@ -41,7 +41,7 @@
             required
           />
           <img
-            src="/Assets/icons/login/login_password_right.svg"
+            src="../../Assets/icons/login/login_password_right.svg"
             alt="password-right"
             class="input-icon"
           />
@@ -49,6 +49,6 @@
         <button type="submit" class="login-btn">login</button>
       </form>
     </div>
-    <script src="/Scripts/Admin/login.js"></script>
+    <script src="../../Scripts/Admin/login.js"></script>
   </body>
 </html>
