--- a/Pages/Admin/movies.html
+++ b/Pages/Admin/movies.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../Styles/Admin/movies.css" />
     <link
       rel="icon"
-      href="/Assets/images/logo_with_uploaded_image (1).png"
+      href="../../Assets/images/logo_with_uploaded_image (1).png"
       type="image/png"
     />
   </head>
@@ -15,7 +15,7 @@
     <div class="left">
       <div class="logo-div">
         <img
-          src="/Assets/icons/dashboard/dashboard-logo.svg"
+          src="../../Assets/icons/dashboard/dashboard-logo.svg"
           alt="Filmalisa Logo"
           class="logo-icon"
         />
@@ -27,7 +27,7 @@
           onclick="window.location.href='../../Pages/Admin/dashboard.html'"
         >
           <img
-            src="/Assets/icons/movie/movie-icon3.svg"
+            src="../../Assets/icons/movie/movie-icon3.svg"
             alt="Dashboard Icon"
             class="menu-icon"
           />
@@ -38,7 +38,7 @@
           onclick="window.location.href='../../Pages/Admin/movies.html'"
         >
           <img
-            src="/Assets/icons/movie/movie-icon2.svg"
+            src="../../Assets/icons/movie/movie-icon2.svg"
             alt="Movies Icon"
             class="menu-icon"
           />
@@ -49,7 +49,7 @@
           onclick="window.location.href='../../Pages/Admin/categories.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-star.svg"
+            src="../../Assets/icons/dashboard/dashboard-star.svg"
             alt="Categories Icon"
             class="menu-icon"
           />
@@ -60,7 +60,7 @@
           onclick="window.location.href='../../Pages/Admin/users.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-user.svg"
+            src="../../Assets/icons/dashboard/dashboard-user.svg"
             alt="Users Icon"
             class="menu-icon"
           />
@@ -71,7 +71,7 @@
           onclick="window.location.href='../../Pages/Admin/comments.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-comments.svg"
+            src="../../Assets/icons/dashboard/dashboard-comments.svg"
             alt="Comments Icon"
             class="menu-icon"
           />
@@ -82,7 +82,7 @@
           onclick="window.location.href='../../Pages/Admin/contactus.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-contacts.svg"
+            src="../../Assets/icons/dashboard/dashboard-contacts.svg"
             alt="Contact Icon"
             class="menu-icon"
           />
@@ -93,7 +93,7 @@
           onclick="window.location.href='../../Pages/Admin/actors.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-user.svg"
+            src="../../Assets/icons/dashboard/dashboard-user.svg"
             alt="Actors Icon"
             class="menu-icon"
           />
@@ -108,7 +108,7 @@
         >
 
         <img
-          src="/Assets/icons/dashboard/dashboard-logout.svg"
+          src="../../Assets/icons/dashboard/dashboard-logout.svg"
           alt="Logout Icon"
           class="logout-icon"
         />
@@ -128,7 +128,7 @@
             <span class="button-span">Create</span>
           </button>
           <img
-            src="/Assets/images/profile.svg"
+            src="../../Assets/images/profile.svg"
             alt="Profile Picture"
             class="profile-pic"
           />
@@ -154,7 +154,7 @@
               <td>1</td>
               <td>
                 <img
-                  src="/Assets/icons/movie/movie-icon.svg"
+                  src="../../Assets/icons/movie/movie-icon.svg"
                   style="width: 29px; height: 39px"
                   alt="Movie Poster"
                 /><br />
@@ -165,7 +165,7 @@
               <td>7.6</td>
               <td>
                 <img
-                  src="/Assets/icons/categories/edit-icon.png"
+                  src="../../Assets/icons/categories/edit-icon.png"
                   alt="zoom-icon"
                   style="width: 18px; height: 18px"
                   class="img-icon"
@@ -174,7 +174,7 @@
               </td>
               <td>
                 <img
-                  src="/Assets/icons/categories/remove-icon.png"
+                  src="../../Assets/icons/categories/remove-icon.png"
                   alt="remove-icon"
                   class="img-icon img-icon1"
                   style="width: 18px; height: 18px"
@@ -255,11 +255,11 @@
           </div>
 
           <div class="image-wrapper">
-            <img src="/Assets/images/modul-photos.svg" alt="Image" />
+            <img src="../../Assets/images/modul-photos.svg" alt="Image" />
           </div>
         </div>
       </div>
     </div>
-    <script src="/Scripts/Admin/movies.js"></script>
+    <script src="../../Scripts/Admin/movies.js"></script>
   </body>
 </html>
