--- a/Pages/Client/404.html
+++ b/Pages/Client/404.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404</title>
     <link rel="stylesheet" href="../../Styles/Client/404.css" />
-    <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
+    <link rel="icon" href="../../Assets/images/logo_with_uploaded_image (1).png" type="image/png">
 
 
   </head>
   <body>
     <h1>404 Page</h1>
-    <script src="/Scripts/Client/404.js"></script>
+    <script src="../../Scripts/Client/404.js"></script>
   </body>
 </html>
