--- a/Pages/Client/search.html
+++ b/Pages/Client/search.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search</title>
     <link rel="stylesheet" href="../../Styles/Client/search.css" />
-    <link rel="icon" href="/Assets/images/logo_with_uploaded_image (1).png" type="image/png">
+    <link rel="icon" href="../../Assets/images/logo_with_uploaded_image (1).png" type="image/png">
 
   </head>
   <body>
     <h1>Search Page</h1>
-    <script src="/Scripts/Client/search.js"></script>
+    <script src="../../Scripts/Client/search.js"></script>
   </body>
 </html>
