src titles changed

--- a/Pages/Admin/actors.html
+++ b/Pages/Admin/actors.html
@@ -15,7 +15,7 @@
     <div class="left">
       <div class="logo-div">
         <img
-          src="/Assets/icons/dashboard/dashboard-logo.svg"
+          src="../../Assets/icons/dashboard/dashboard-logo.svg"
           alt="Filmalisa Logo"
           class="logo-icon"
         />
@@ -27,7 +27,7 @@
           onclick="window.location.href='../../Pages/Admin/dashboard.html'"
         >
           <img
-            src="/Assets/icons/movie/movie-icon3.svg"
+            src="../../Assets/icons/movie/movie-icon3.svg"
             alt="Dashboard Icon"
             class="menu-icon"
           />
@@ -38,7 +38,7 @@
           onclick="window.location.href='../../Pages/Admin/movies.html'"
         >
           <img
-            src="/Assets/icons/dashboard/dashboard-movies.svg"
+            src="../../Assets/icons/dashboard/dashboard-movies.svg"
             alt="Movies Icon"
             class="menu-icon"
           />
