admin-login Api finish

--- a/Pages/Admin/login.html
+++ b/Pages/Admin/login.html
@@ -24,9 +24,7 @@
               class="input-icon"
             />
           </div>
-          <div>
-            <input type="text" id="email" placeholder="email" required />
-          </div>
+          <input type="text" id="email" placeholder="email" required />
         </div>
         <div class="form-group">
           <img
@@ -43,7 +41,8 @@
           <img
             src="../../Assets/icons/login/login_password_right.svg"
             alt="password-right"
-            class="input-icon"
+            class="input-icon show-icon"
+            id="toggle-password"
           />
         </div>
         <button type="submit" class="login-btn">login</button>
