Fix(UI): add color icon

--- a/Pages/Client/favorite.html
+++ b/Pages/Client/favorite.html
@@ -23,20 +23,17 @@
         </figure>
 
         <nav class="logo_links">
-          <a href="../Client/home.html"
+          <a href="../Client/home.html" class="icon"
             ><img src="../../Assets/icons/Client-login/home.svg" alt="" />
           </a>
-          <a href="../Client/search.html"
+          <a href="../Client/search.html" class="icon"
             ><img src="../../Assets/icons/Client-login/movie.svg" alt=""
           /></a>
-          <a href="../Client/account.html"
+          <a href="../Client/account.html" class="icon"
             ><img src="../../Assets/icons/Client-login/tv.svg" alt=""
           /></a>
-          <a href="../Client/favorite.html"
-            ><img
-              src="../../Assets/icons/Client-login/favorite.svg"
-              class="favorite-icon"
-              alt=""
+          <a href="../Client/favorite.html" class="icon"
+            ><img src="../../Assets/icons/Client-login/favorite.svg" alt="" class="icon-img"
           /></a>
         </nav>
       </div>
