admin-pages logout button edit

--- a/Pages/Admin/categories.html
+++ b/Pages/Admin/categories.html
@@ -105,12 +105,7 @@
         </li>
       </ul>
 
-      <div
-        class="logout-div"
-        onclick="window.location.href='../../Pages/Admin/login.html'"
-      >
-        >
-
+      <div class="logout-div">
         <img
           src="../../Assets/icons/dashboard/dashboard-logout.svg"
           alt="Logout Icon"
