added some changes

--- a/index.html
+++ b/index.html
@@ -12,26 +12,35 @@
     />
   </head>
   <body>
-    <header class="header">
-      <figure class="header-logo">
-        <img src="./Assets/images/filmalisalogo.svg" alt="" />
-        <h1>filmalisa</h1>
-      </figure>
-      <nav class="header-btn">
-        <a href="./Pages/Client/login.html">Sign in</a>
-      </nav>
+    <header>
+      <div class="container">
+        <div class="header">
+          <figure class="header-logo">
+            <img src="./Assets/images/filmalisalogo.svg" alt="" />
+            <h1>filmalisa</h1>
+          </figure>
+          <nav class="header-btn">
+            <a href="./Pages/Client/login.html">Sign in</a>
+          </nav>
+        </div>
+      </div>
     </header>
     <main>
       <section class="show-section">
-        <h2>Unlimited movies, TV shows, and more</h2>
-        <p class="show-text1">Filmalisa is a movie search platform</p>
-        <p class="show-text2">
-          Ready to watch? Enter your email to create or restart your membership.
-        </p>
-        <form action="">
-          <input type="email" placeholder="Email address" id="emailInput" />
-          <button  class="started-btn" id="startBtn" type="button">Get Started  > </button>
-        </form>
+        <div class="container">
+          <h2>Unlimited movies, TV shows, and more</h2>
+          <p class="show-text1">Filmalisa is a movie search platform</p>
+          <p class="show-text2">
+            Ready to watch? Enter your email to create or restart your
+            membership.
+          </p>
+          <form action="">
+            <input type="email" placeholder="Email address" id="emailInput" />
+            <button class="started-btn" id="startBtn" type="button">
+              Get Started >
+            </button>
+          </form>
+        </div>
       </section>
 
       <section class="enjoy-section">
