dashboard px edit

--- a/Pages/Admin/dashboard.html
+++ b/Pages/Admin/dashboard.html
@@ -127,33 +127,37 @@
         </div>
       </div>
       <div class="card-container">
-        <div class="card1 card-hover">
-          <p class="card-p1">Favorite actions</p>
-          <p class="card-p2">0</p>
+        <div class="card-div">
+          <div class="card1 card-hover">
+            <p class="card-p1">Favorite actions</p>
+            <p class="card-p2">0</p>
+          </div>
+          <div class="card2 card-hover">
+            <p class="card-p1">Users</p>
+            <p class="card-p2">0</p>
+          </div>
+          <div class="card3 card-hover">
+            <p class="card-p1">Movies</p>
+            <p class="card-p2">0</p>
+          </div>
+          <div class="card4 card-hover">
+            <p class="card-p1">Comments</p>
+            <p class="card-p2">0</p>
+          </div>
         </div>
-        <div class="card2 card-hover">
-          <p class="card-p1">Users</p>
-          <p class="card-p2">0</p>
-        </div>
-        <div class="card3 card-hover">
-          <p class="card-p1">Movies</p>
-          <p class="card-p2">0</p>
-        </div>
-        <div class="card4 card-hover">
-          <p class="card-p1">Comments</p>
-          <p class="card-p2">0</p>
-        </div>
-        <div class="card5 card-hover">
-          <p class="card-p1">Categories</p>
-          <p class="card-p2">0</p>
-        </div>
-        <div class="card6 card-hover">
-          <p class="card-p1">Actors</p>
-          <p class="card-p2">0</p>
-        </div>
-        <div class="card7 card-hover">
-          <p class="card-p1">Contacts</p>
-          <p class="card-p2">0</p>
+        <div class="card-div">
+          <div class="card5 card-hover">
+            <p class="card-p1">Categories</p>
+            <p class="card-p2">0</p>
+          </div>
+          <div class="card6 card-hover">
+            <p class="card-p1">Actors</p>
+            <p class="card-p2">0</p>
+          </div>
+          <div class="card7 card-hover">
+            <p class="card-p1">Contacts</p>
+            <p class="card-p2">0</p>
+          </div>
         </div>
       </div>
     </div>
