admin-movie css edit

--- a/Pages/Admin/movies.html
+++ b/Pages/Admin/movies.html
@@ -236,7 +236,7 @@
           </div>
 
           <div class="image-wrapper">
-            <img src="../../Assets/images/modul-photos.svg" alt="Image" />
+            <img src="../../Assets/images/default.jpg" alt="Image" />
           </div>
         </div>
       </div>
