--- a/Pages/Client/404.html
+++ b/Pages/Client/404.html
@@ -5,12 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404</title>
     <link rel="stylesheet" href="../../Styles/Client/404.css" />
-    <link rel="icon" href="../../Assets/images/logo_with_uploaded_image (1).png" type="image/png">
-
-
+    <link
+      rel="icon"
+      href="../../Assets/images/logo_with_uploaded_image (1).png"
+      type="image/png"
+    />
   </head>
-  <body>
-    <h1>404 Page</h1>
+  <body class="bg-dark text-light">
+    <main class="main-404">
+      <div class="side-bar">
+        <figure>
+          <img
+            src="../../Assets/images/logo_with_uploaded_image (1).png"
+            alt=" filmalisaLogo"
+            class="main-logo"
+          />
+        </figure>
+
+        <nav class="logo_links">
+          <a href="./home.html" class="icon"
+            ><img src="../../Assets/icons/Client-login/home.svg" alt="" />
+          </a>
+          <a href="./search.html" class="icon"
+            ><img src="../../Assets/icons/Client-login/movie.svg" alt=""
+          /></a>
+          <a href="./account.html" class="icon"
+            ><img src="../../Assets/icons/Client-login/tv.svg" alt=""
+          /></a>
+          <a href="./favorite.html" class="icon"
+            ><img src="../../Assets/icons/Client-login/favorite.svg" alt=""
+          /></a>
+        </nav>
+      </div>
+      <div class="right-part">
+        <figure>
+          <img src="../../Assets/icons/404/filmrolls.svg" alt="" />
+        </figure>
+        <h1 >Lost your way?</h1>
+        <p>
+          Oops! This is awkward. You are looking for something that doesn't
+          actually exist.
+        </p>
+
+        <a href="./home.html" class="btn">Go Home</a>
+      </div>
+    </main>
     <script src="../../Scripts/Client/404.js"></script>
   </body>
 </html>
