admin-actors api

--- a/Pages/Admin/actors.html
+++ b/Pages/Admin/actors.html
@@ -135,38 +135,16 @@
           <thead>
             <tr>
               <th class="th-border">ID</th>
+              <th>İmage</th>
               <th>Name</th>
               <th>Surname</th>
               <th>Edit</th>
               <th class="th-border2">Remove</th>
             </tr>
           </thead>
-          <tbody class="tbody">
-            <tr>
-              <td>1</td>
-              <td>Tony</td>
-              <td>Stark</td>
-              <td>
-                <img
-                  src="../../Assets/icons/categories/edit-icon.png
-                  "
-                  alt="edit-icon"
-                  class="img-icon"
-                />
-              </td>
-              <td>
-                <img
-                  src="../../Assets/icons/categories/remove-icon.png
-                "
-                  alt="remove-icon"
-                  class="img-icon"
-                  id="create-btn2"
-                  onclick="openRemoveModal()"
-                />
-              </td>
-            </tr>
-          </tbody>
+          <tbody class="tbody"></tbody>
         </table>
+        <div id="pagination-container" class="pagination-container"></div>
       </div>
     </div>
 
