admin-movie (js edit)

--- a/Pages/Admin/movies.html
+++ b/Pages/Admin/movies.html
@@ -134,14 +134,14 @@
         <table>
           <thead>
             <tr>
-              <th>ID</th>
+              <th class="th-border">ID</th>
               <th></th>
               <th>Title</th>
               <th>Overview</th>
               <th>Category</th>
               <th>IMDB</th>
               <th>Edit</th>
-              <th>Remove</th>
+              <th class="th-border2">Remove</th>
             </tr>
           </thead>
           <tbody></tbody>
