--- a/Pages/Admin/contactus.html
+++ b/Pages/Admin/contactus.html
@@ -135,7 +135,7 @@
               <th>Username</th>
               <th>Email</th>
               <th>Reason</th>
-              <th>Edit</th>
+              <th>View</th>
               <th class="th-border2">Remove</th>
             </tr>
           </thead>
