--- a/index.html
+++ b/index.html
@@ -51,15 +51,37 @@
             players, and more.
           </p>
         </div>
-        <figure>
-          <img src="./Assets/icons/landing-page/tv.svg" alt="tv-img" />
-        </figure>
+        <div class="loading-tv-main">
+          <figure class="loading-tv">
+            <img
+              src="./Assets/images/loading-tv.png"
+              alt="tv-img"
+              class="loading-tv-frame"
+            />
+            <img
+              src="./Assets/images/loading-tv.gif"
+              alt="loading-animation"
+              class="loading-tv-content"
+            />
+          </figure>
+        </div>
       </section>
 
       <section class="stream-part">
-        <figure>
-          <img src="./Assets/icons/landing-page/screen-prew.svg" alt="" />
-        </figure>
+        <div class="loading-tv-main-2">
+          <figure class="loading-tv-2">
+            <img
+              src="./Assets/images/loading-tv-2.webp"
+              alt="tv-img"
+              class="loading-tv-frame-2"
+            />
+            <img
+              src="./Assets/images/loading-tv-2.gif"
+              alt="loading-animation"
+              class="loading-tv-content-2"
+            />
+          </figure>
+        </div>
         <div class="stream-left">
           <h4>Watch everywhere</h4>
           <p class="stream-text">
