fixed page style

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
               src="./Assets/images/loading-tv.png"
               alt="tv-img"
               class="loading-tv-frame"
+              style="width: 500px; height: 350px;"
             />
             <img
               src="./Assets/images/loading-tv.gif"
@@ -74,6 +75,7 @@
               src="./Assets/images/loading-tv-2.webp"
               alt="tv-img"
               class="loading-tv-frame-2"
+              style="width: 500px; height: 350px;"
             />
             <img
               src="./Assets/images/loading-tv-2.gif"
@@ -100,7 +102,7 @@
           </p>
         </div>
         <figure>
-          <img src="./Assets/icons/landing-page/kids.svg" alt="" />
+          <img src="./Assets/icons/landing-page/kids.svg" alt="" style="width: 500px; height: 350px;" />
         </figure>
       </section>
 
