--- a/Pages/Client/register.html
+++ b/Pages/Client/register.html
@@ -13,50 +13,21 @@
   </head>
   <body class="bg-dark text-light">
     <main class="client-login">
-      <div class="side-bar">
-        <figure>
-          <img
-            src="../../Assets/images/logo_with_uploaded_image (1).png"
-            alt=" filmalisaLogo"
-            class="main-logo"
-          />
-        </figure>
-        <nav class="logo_links">
-          <a href=""
-            ><img src="../../Assets/icons/Client-login/home.svg" alt="" />
-          </a>
-          <a href=""
-            ><img src="../../Assets/icons/Client-login/movie.svg" alt=""
-          /></a>
-          <a href=""
-            ><img src="../../Assets/icons/Client-login/tv.svg" alt=""
-          /></a>
-          <a href=""
-            ><img src="../../Assets/icons/Client-login/favorite.svg" alt=""
-          /></a>
-        </nav>
-      </div>
       <div class="right-part">
         <img src="../../Assets/icons/Client-login/mainlogo.svg" alt="" />
-        <h1>filmalisa</h1>
+        <h1>Filmalisa</h1>
 
-        <h2>register</h2>
+        <h2>Register</h2>
         <form>
           <div class="form-group">
             <img
-              src="../../Assets/icons/Client-login/lpassword-icon.svg"
-              alt="password"
+              src="../../Assets/icons/Client-login/left-icon.svg"
+              alt="email"
               class="input-icon"
             />
-            <input type="password" placeholder="fullname" required />
-            <img
-              src="../../Assets/icons/Client-login/right-icon.svg"
-              alt="fullname-right"
-              class="input-icon"
-            />
+            <input type="text" id="fullName" placeholder="fullname" required />
           </div>
           <div class="form-group">
-            
             <div>
               <img
                 src="../../Assets/icons/Client-login/left-icon.svg"
@@ -64,9 +35,8 @@
                 class="input-icon"
               />
             </div>
-            <div>
-              <input type="text" placeholder="email" required />
-            </div>
+
+            <input type="email" id="email" placeholder="email" required />
           </div>
           <div class="form-group">
             <img
@@ -74,7 +44,12 @@
               alt="password"
               class="input-icon"
             />
-            <input type="password" placeholder="password" required />
+            <input
+              type="password"
+              id="password"
+              placeholder="password"
+              required
+            />
             <img
               src="../../Assets/icons/Client-login/right-icon.svg"
               alt="password-right"
@@ -87,7 +62,13 @@
           <button type="submit" class="register-btn">register</button>
         </form>
       </div>
+
+      <div class="popup" id="popup">
+        <p id="pop-p"></p>
+        <button class="close-btn" onclick="closePopup()">Close</button>
+      </div>
     </main>
+
     <script src="../../Scripts/Client/register.js"></script>
   </body>
 </html>
