css and js edit

--- a/Pages/Admin/actors.html
+++ b/Pages/Admin/actors.html
@@ -198,6 +198,11 @@
       </div>
     </div>
 
+    <div class="popup" id="popup">
+      <p id="pop-p">Bu bir popup mesajıdır!</p>
+      <button class="close-btn" onclick="closePopup()">Close</button>
+    </div>
+
     <script src="../../Scripts/Admin/actors.js"></script>
   </body>
 </html>
