--- a/Pages/Admin/users.html
+++ b/Pages/Admin/users.html
@@ -136,15 +136,16 @@
               <th class="th-border2">Password</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
+          <tbody id="tBody">
+            <!-- <tr>
               <td>1</td>
               <td>John Doe</td>
               <td>johndoe@gmail.com</td>
               <td>asdasd123321</td>
-            </tr>
+            </tr> -->
           </tbody>
         </table>
+        <div id="pagination-container" class="pagination-container"></div>
       </div>
     </div>
 
